apps/services/gitea/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git.lab.apj.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`git.lab.apj.dev`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - name: gitea-internal
          port: 80
  tls:
    secretName: lab-apj-dev-tls
# data:
#   resource.customizations: |
#     extensions/Ingress:
#         health.lua: |
#           hs = {}
#           hs.status = "Healthy"
#           return hs

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: git.lab.apj.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: gitea
spec:
  entryPoints:
    - web-int-tls
  routes:
    - match: Host(`git.lab.apj.dev`)
      kind: Rule
      services:
        - name: gitea-internal
          port: 80
  tls:
    secretName: lab-apj-dev-tls
# data:
#   resource.customizations: |
#     extensions/Ingress:
#         health.lua: |
#           hs = {}
#           hs.status = "Healthy"
#           return hs
